2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs: Always check HasChildNodes before
	  calling BuildChildNodes. Notice that extensions may add new nodes, even
	  if the original node builder returns HasChildNodes=false.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/OpenFileInSolutionDialog.cs: Make sure icons
	  are constructed in the gui thread (just in case). UpdateList doesn't
	  need to perform the search if the dialog is not visible. Fixes a crash
	  when hidding and showing the dialog.
	* MonoDevelop.Ide.Gui/IdeStartup.cs: Print unhandled exception to the
	  output.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Added an Other section in the MD property
	  dialog and moved some options there to avoid too many branches.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/OutputProgressMonitor.cs,
	  MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs: Show output errors in
	  red.

2007-09-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs: Make ILocationListPad
	  implementation work again. GetSelected doesn't work for multi-selection
	  lists.
	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Make sure GetNextLocation
	  returns the first row after a compilation. Looks like when the pad is
	  focused, the first row is automatically selected, so we need a flag to
	  ignore that selection if the list has been cleared out.

2007-09-19  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.DeleteFileDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.CodeGenerationPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.BuildPanelWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.IncludeFilesDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.ExternalToolPanelWidget.cs,